Refactor infrastructure to implement hexagonal architecture
Migrated repository and service layers to align with hexagonal architecture. Introduced new adapters, ports, and shared exceptions to separate domain logic from infrastructure details. Deprecated legacy classes and updated mappings to fit the new structure.